# Building-an-Educational-Chatbot-based-on-Knowledge-Graph

./: .gitignore  README.md  baseline.ipynb  baseline.json  chunks.txt  config.yaml  docker-compose.yml  example_outputs.json  explanation_output.json  formatted_quiz_generation_test_output_gemini_gpt4omini.json  main.py  pyproject.toml  quiz_generation_detailed_output.md  quiz_generation_test_output.json  quiz_generation_test_output_gemini_gpt4omini.json  quiz_generation_test_output_sonnet_gpt4omini.json  slots.json  test.ipynb  test.py  test_llm_as_judge.py  topics.json
docker/: Dockerfile.file_upload  Dockerfile.generation
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  FileUpload.css  FileUpload.js
libs/base/: pyproject.toml
libs/base/src/base/: __init__.py  base_application.py  base_model.py  base_service.py
libs/graph_db/: pyproject.toml
libs/graph_db/src/graph_db/: __init__.py  neo4j_service.py  settings.py
libs/graph_db/src/graph_db/utils/: __init__.py  utils.py
libs/lite_llm/: pyproject.toml
libs/lite_llm/src/lite_llm/: __init__.py  models.py  services.py  settings.py
libs/logger/: pyproject.toml
libs/logger/src/logger/: __init__.py  logger.py
libs/open_search/: pyproject.toml
libs/open_search/src/open_search/: __init__.py  opensearch.py  settings.py
libs/postgres_db/: pyproject.toml
libs/postgres_db/src/postgres_db/: __init__.py
libs/storage/: pyproject.toml
libs/storage/src/storage/: __init__.py  base.py
libs/storage/src/storage/minio/: __init__.py  minio_service.py  settings.py
services/chatbot/: pyproject.toml
services/chatbot/src/chatbot/: __init__.py  settings.yaml
services/chatbot/src/chatbot/api/: main.py
services/chatbot/src/chatbot/application/: __init__.py  chatbot.py
services/chatbot/src/chatbot/domain/main_agent/aggregator/: __init__.py  prompts.py  service.py
services/chatbot/src/chatbot/domain/main_agent/decomposer/: __init__.py  prompts.py  service.py
services/chatbot/src/chatbot/domain/main_agent/direct_answer/: __init__.py  prompts.py  service.py
services/chatbot/src/chatbot/domain/main_agent/memory/: __init__.py  service.py
services/chatbot/src/chatbot/domain/main_agent/rephraser/: __init__.py  prompts.py  service.py
services/chatbot/src/chatbot/domain/main_agent/sub_agent/: __init__.py  service.py
services/chatbot/src/chatbot/domain/main_agent/sub_agent/context_refinement/: __init__.py  prompts.py  service.py
services/chatbot/src/chatbot/domain/router_agent/: __init__.py  service.py
services/chatbot/src/chatbot/shared/settings/: settings.py
services/chatbot/src/chatbot/shared/state/: chatbot_state.py  sub_agent_state.py
services/chatbot/src/chatbot/shared/utils/: chatbot_utils.py  utils.py
services/document/: pyproject.toml
services/document/src/document/: __init__.py
services/document/src/document/domain/parser/: __init__.py  service.py
services/document/src/document/domain/parser/docx/: __init__.py  service.py  utils.py
services/document/src/document/domain/parser/image_descriptor/: __init__.py  service.py
services/document/src/document/domain/parser/pdf/: __init__.py  prompts.py  service.py  utils.py
services/document/src/document/domain/parser/pptx/: __init__.py  service.py
services/document/src/document/shared/settings/: __init__.py  parser.py
services/document/src/document/shared/utils/: __init__.py  token_calculator.py
services/file_upload/: pyproject.toml
services/file_upload/src/file_upload/: __init__.py
services/generation/: pyproject.toml
services/generation/src/generation/: __init__.py  settings.yaml  test.ipynb  test.py
services/generation/src/generation/api/helpers/: exception_handler.py
services/generation/src/generation/api/routers/: __init__.py  exam_manager.py  manager.py  quiz_manager.py
services/generation/src/generation/application/: exam_generation.py  generation.py  quiz_generation.py
services/generation/src/generation/domain/course_extractor/: __init__.py  prompts.py  service.py
services/generation/src/generation/domain/exam_generation/: __init__.py  prompts.py  service.py
services/generation/src/generation/domain/lecture_summarizer/: __init__.py  prompts.py  service.py
services/generation/src/generation/domain/llm_as_judge/: README.md  __init__.py  models.py  prompts.py  service.py
services/generation/src/generation/domain/parser/: __init__.py  service.py
services/generation/src/generation/domain/quiz_generation/: __init__.py  prompts.py  service.py
services/generation/src/generation/domain/quiz_validator/: service.py
services/generation/src/generation/shared/models/: __init__.py  files.py  generation.py  quiz_dto.py
services/generation/src/generation/shared/settings/: __init__.py  concept_card.py  course_extractor.py  distractors.py  exam_settings.py  explanation.py  factual.py  parser.py  (+12 more)
services/indexing/: pyproject.toml
services/indexing/src/indexing/: __init__.py  celery_app.py  settings.yaml  tasks.py
services/indexing/src/indexing/api/: main.py
services/indexing/src/indexing/application/: indexing.py
services/indexing/src/indexing/domain/chunker/: __init__.py  service.py
services/indexing/src/indexing/domain/chunker/utils/: __init__.py  header_processor.py  split_chunks.py
services/indexing/src/indexing/domain/graph_builder/: __init__.py  prompts.py  service.py
services/indexing/src/indexing/domain/parser/: service.py
services/indexing/src/indexing/domain/parser/docx/: service.py
services/indexing/src/indexing/domain/parser/pdf/: prompts.py  service.py  utils.py
services/indexing/src/indexing/domain/parser/pptx/: service.py
services/indexing/src/indexing/shared/models/: __init__.py
services/indexing/src/indexing/shared/settings/: __init__.py  chunker.py  parser.py  redis.py  settings.py
services/indexing/src/indexing/shared/utils/: __init__.py  files.py
services/rag/: pyproject.toml
services/rag/src/rag/: __init__.py  settings.yaml
services/rag/src/rag/api/: main.py
services/rag/src/rag/application/: local_search.py
(+66 files in other folders)
