[project]
name = "base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vulh-1357", email = "le.hoang.vu@sun-asterisk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
base = "base:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
