[project]
name = "graph-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vulh-1357", email = "le.hoang.vu@sun-asterisk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base",
    "httpx>=0.28.1",
    "logger",
    "neo4j>=5.28.2",
]

[project.scripts]
graph-db = "graph_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
base = { workspace = true }
logger = { workspace = true }
