[project]
name = "lite-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vulh-1357", email = "le.hoang.vu@sun-asterisk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base",
    "httpx>=0.28.1",
    "litellm[proxy]>=1.37.5",
    "logger",
    "pydantic>=2.11.7",
]

[project.scripts]
lite-llm = "lite_llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
base = { workspace = true }
logger = { workspace = true }
