[project]
name = "open-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vulh-1357", email = "le.hoang.vu@sun-asterisk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base",
    "boto3==1.34.159",
    "fastapi==0.109.1",
    "instructor==1.0.2",
    "logger",
    "opensearch-dsl>=2.1.0",
    "opensearch-py>=3.0.0",
]

[project.scripts]
open-search = "open_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
base = { workspace = true }
logger = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
