[project]
name = "document"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vulh-1357", email = "le.hoang.vu@sun-asterisk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base",
    "lite-llm",
    "logger",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.3",
    "python-pptx>=1.0.2",
]

[project.scripts]
document = "document:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logger = { workspace = true }
base = { workspace = true }
lite-llm = { workspace = true }
