[project]
name = "indexing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vuniem131104", email = "niemhoalongvu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fitz>=0.0.1.dev2",
]

[project.scripts]
indexing = "indexing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
