[project]
name = "indexing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vuniem131104", email = "niemhoalongvu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base",
    "graph-db",
    "lite-llm",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "storage",
]

[project.scripts]
indexing = "indexing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
storage = { workspace = true }
graph-db = { workspace = true }
base = { workspace = true }
lite-llm = { workspace = true }
